<resources>
    <!--page names-->
    <string name="app_name">cmpt276assignment</string>
    <string name="game_view">Games Played</string>
    <string name="game_add">New Game</string>
    <string name="edit_page">Edit Game</string>
    <string name="save_bar">SAVE</string>

    <!--other labels-->
    <string name="saveButtonLabel">SAVE</string>

    <string name="firstPlayerLabel">Player 1</string>
    <string name="secondPlayerLabel">Player 2</string>

    <string name="cardNumberLabel">Number Cards</string>
    <string name="pointSumLabel">Sum Points</string>
    <string name="wagerNumLabel">Number Wagers</string>
    <string name="ScoresLabel">Scores</string>

    <!--placeholders-->
    <string name="calcPlaceholder">--</string>
    <string name="emptyStatusMessage">There\'s no games here\n right now...</string>
    <string name="logoDescription">android icon</string>
</resources>